--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mypy = "^1.5.1"
 python-dotenv = "^1.0.0"
 djangorestframework-stubs = "^3.14.2"
 django-stubs = "^4.2.3"
+django-cors-headers = "^4.2.0"
 
 
 [build-system]
